@@ -1,3 +1,4 @@
+* Add global search
 * Replace view shortcut by menu favorite
 * Store default language in database
 * Add icon attribute on fields
